--- a/package.json
+++ b/package.json
@@ -8,12 +8,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-firebase/app": "^13.0.1",
+    "@react-native-firebase/auth": "^13.0.1",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "~42.0.1",
+    "expo-constants": "~11.0.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^9.4.0",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-firebase-hooks": "^4.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-paper": "^4.9.2",
+    "react-native-screens": "^3.9.0",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
