--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
-    "@react-native-firebase/app": "^13.0.1",
-    "@react-native-firebase/auth": "^13.0.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~42.0.1",
@@ -24,6 +22,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-crop-picker": "^0.37.2",
     "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.9.0",
     "react-native-web": "~0.13.12",
