--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.37.2",
+    "react-native-image-picker": "^4.2.0",
     "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.9.0",
     "react-native-web": "~0.13.12",
