--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.0.4",
     "firebase": "^9.4.0",
     "formik": "^2.2.9",
+    "nanoid": "^3.1.30",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-firebase-hooks": "^4.0.1",
