--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@react-navigation/stack": "^6.0.11",
     "expo": "~42.0.1",
     "expo-constants": "~11.0.1",
+    "expo-font": "^10.0.3",
     "expo-status-bar": "~1.0.4",
-    "firebase": "^9.4.0",
+    "firebase": "^9.1.3",
     "formik": "^2.2.9",
     "nanoid": "^3.1.30",
     "react": "16.13.1",
