--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "expo-status-bar": "~1.0.4",
     "firebase": "^9.1.3",
     "formik": "^2.2.9",
-    "nanoid": "^3.1.30",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-firebase-hooks": "^4.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-get-random-values": "^1.7.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-picker": "^4.2.0",
     "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.9.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
