--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-image-picker": "^4.2.0",
+    "react-native-pager-view": "5.0.12",
     "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.9.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.1",
     "uuid": "^8.3.2"
