--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
-    "expo": "~42.0.1",
+    "expo": "^42.0.5",
     "expo-constants": "~11.0.1",
-    "expo-font": "^10.0.3",
+    "expo-font": "^9.2.1",
+    "expo-modules-core": "^0.2.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "^9.1.3",
     "formik": "^2.2.9",
@@ -30,7 +31,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.9.0",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.17.5",
     "styled-components": "^5.3.1",
     "uuid": "^8.3.2"
   },
