--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.9",
-    "@react-native-google-signin/google-signin": "^7.0.4",
+    "@react-native-google-signin/google-signin": "^7.2.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "^42.0.5",
+    "expo-auth-session": "^3.5.0",
+    "expo-av": "~9.2.3",
     "expo-constants": "~11.0.1",
     "expo-font": "^9.2.1",
+    "expo-google-sign-in": "~9.2.1",
     "expo-modules-core": "^0.2.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "^9.1.3",
@@ -22,6 +25,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-firebase-hooks": "^4.0.1",
+    "react-google-login": "^5.2.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.1",
@@ -36,7 +40,7 @@
     "react-native-web": "^0.17.5",
     "styled-components": "^5.3.1",
     "uuid": "^8.3.2",
-    "expo-av": "~9.2.3"
+    "expo-updates": "~0.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
