--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "PrayUp",
     "slug": "prayup",
-    "version": "1.1.0",
+    "version": "1.1.2",
     "orientation": "portrait",
     "icon": "./assets/img/lgo.png",
     "splash": {
@@ -17,16 +17,12 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.pray.prayup",
+      "buildNumber": "1.0.0"
     },
     "android": {
-      "googleServicesFile": "./google-services.json",
-      "versionCode": 2,
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.pray.prayup"
+      "package": "com.prayup.prayup",
+      "versionCode": 5
     },
     "web": {
       "favicon": "./assets/favicon.png"
