--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "expo": {
     "name": "PrayUp",
     "slug": "prayup",
-    "version": "1.1.0",
+    "version": "1.1.2",
     "orientation": "portrait",
-    "icon": "./assets/img/app_logo.png",
+    "icon": "./assets/img/lgo.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -17,20 +17,16 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "bundleIdentifier": "com.pray.prayup",
+      "buildNumber": "1.0.0"
     },
     "android": {
-      "versionCode": 2,
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.ashrays30.prayup"
+      "package": "com.prayup.prayup",
+      "versionCode": 5
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": "",
-    "sdkVersion": "42.0.0"
+    "description": ""
   }
 }
