--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "PrayUp",
     "slug": "prayup",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "orientation": "portrait",
     "icon": "./assets/img/lgo.png",
     "splash": {
@@ -22,11 +22,12 @@
     },
     "android": {
       "package": "com.prayup.prayup",
-      "versionCode": 5
+      "versionCode": 6
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "description": ""
+    "description": "",
+    "sdkVersion": "42.0.0"
   }
 }
